Update numpy version to fix deployment error

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             "langgraph",
             "streamlit",
             "python-dotenv",
-            "ddgs"
+            "ddgs",
+            "numpy>=1.26.2"
           ],
           entrypoint: "my_mathagent.py",
           files: {
