--- a/Myhomepage.html
+++ b/Myhomepage.html
@@ -83,7 +83,7 @@
                      onerror="this.onerror=null; this.src='https://placehold.co/150x150/3b82f6/ffffff?text=JD';">
                 
                 <h2 class="text-5xl md:text-6xl font-extrabold text-gray-900 mb-4 leading-tight">
-                    Hello, I'm <span class="text-blue-600">Jane Doe</span>.
+                    Hello, I'm <span class="text-blue-600">Myan Colatat</span>.
                 </h2>
                 <p class="text-2xl text-gray-600 mb-8 font-light">
                     A Full-Stack Developer focused on building accessible, robust, and beautiful digital experiences.
@@ -356,4 +356,5 @@
     </script>
 
 </body>
+
 </html>
