Update links and text in index.html

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                     A Full-Stack Developer focused on building accessible, robust, and beautiful digital experiences.
                 </p>
                 <div class="space-x-4">
-                    <a href="#projects" class="inline-block bg-blue-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:-translate-y-0.5">
-                        View My Work &rarr;
+                    <a href="rag-chatbot" class="inline-block bg-blue-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:-translate-y-0.5">
+                        View RAG Bot &rarr;
                     </a>
                     <a href="agent.html" class="inline-block bg-green-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-green-700 transition duration-300 transform hover:-translate-y-0.5">
-                        Try My AI Agent &rarr;
+                        Try AI Agent &rarr;
                     </a>
                 </div>
             </div>
