Change image source for Cancer Risk Analysis card
Updated image source for Cancer Risk Analysis project card.

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 
                 <!-- Project Card 3: GitHub Repository -->
                 <div class="bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden border border-gray-100">
-                    <img class="w-full h-48 object-cover" 
-                         src="https://placehold.co/600x400/ef4444/ffffff?text=Medical+AI+Analysis" 
-                         alt="Cancer Risk Analysis Screenshot"
+                   <img class="w-full h-48 object-cover" 
+                     src="images/feature_importance_improved.png" 
+                     alt="Feature Importance Chart">
                          onerror="this.onerror=null; this.src='https://placehold.co/600x400/ef4444/ffffff?text=Medical+AI';">
                     
                     <div class="p-6">
